next/kubernetes/envs/Prod/redirects/odhrnieme.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: odhrnieme-${BUILD_REPOSITORY_NAME}-ingress
  namespace: ${NAMESPACE}
  labels:
    service: redirect
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-dns01
    cert-manager.io/issue-temporary-certificate: 'true'
    ingress.kubernetes.io/redirect-to: https://${BRATISKA_HOSTNAME}/doprava-a-mapy/sprava-a-udrzba-komunikacii/zimna-udrzba
spec:
  tls:
    - hosts:
        - odhrnieme.to
        - www.odhrnieme.to
      secretName: odhrnieme-${BUILD_REPOSITORY_NAME}-tls
  rules:
    - host: odhrnieme.to
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: ${BUILD_REPOSITORY_NAME}-app
                port:
                  number: 80
    - host: www.odhrnieme.to
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: ${BUILD_REPOSITORY_NAME}-app
                port:
                  number: 80
