next/kubernetes/envs/Prod/redirects/primacialnypalac.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: primacialnypalac-${BUILD_REPOSITORY_NAME}-ingress
  namespace: ${NAMESPACE}
  labels:
    service: redirect
  annotations:
    nginx.org/proxy-buffer-size: 16k
    nginx.org/proxy-buffers: 8 16k
    cert-manager.io/cluster-issuer: cloudflare-dns01
    cert-manager.io/issue-temporary-certificate: 'true'
    ingress.kubernetes.io/redirect-to: https://${BRATISKA_HOSTNAME}/mesto-bratislava/transparentne-mesto/majetok-mesta/primacialny-palac
spec:
  tls:
    - hosts:
        - primacialnypalac.${DEPLOYMENT_ENV}bratislava.sk
        - www.primacialnypalac.${DEPLOYMENT_ENV}bratislava.sk
        - primacialnypalac.sk
        - www.primacialnypalac.sk
      secretName: primacialnypalac-${BUILD_REPOSITORY_NAME}-tls
  rules:
    - host: primacialnypalac.${DEPLOYMENT_ENV}bratislava.sk
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: ${BUILD_REPOSITORY_NAME}-app
                port:
                  number: 80
    - host: www.primacialnypalac.${DEPLOYMENT_ENV}bratislava.sk
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: ${BUILD_REPOSITORY_NAME}-app
                port:
                  number: 80
    - host: primacialnypalac.sk
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: ${BUILD_REPOSITORY_NAME}-app
                port:
                  number: 80
    - host: www.primacialnypalac.sk
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: ${BUILD_REPOSITORY_NAME}-app
                port:
                  number: 80
